@@ -111,13 +111,35 @@ worth "fixing" as it stands — see
 [ssl-renegotiation-emulation-limits.md](ssl-renegotiation-emulation-limits.md).
 `TestSsl.testPost` additionally flakes under load, documented there.
 
-### 4. Class-loader leak detection — 2
+### 4. Class-loader leak detection — 2 — **FIXED 2026-09-05**
 
 `catalina.loader.TestWebappClassLoaderMemoryLeak` and
-`TestWebappClassLoaderExecutorMemoryLeak`, 1 of 1 each. Not diagnosed. Both
-assert that a stopped webapp's class loader becomes unreachable, so they are
-sensitive to any reference this VM retains and HotSpot does not — a GC-rooting
-question, not a Tomcat one.
+`TestWebappClassLoaderExecutorMemoryLeak`, 1 of 1 each. **Both now PASS.**
+
+This entry used to read "Not diagnosed … a GC-rooting question, not a Tomcat
+one". That framing was wrong twice over. Neither class asserts anything about
+the loader becoming unreachable — they assert that Tomcat's
+`clearReferencesThreads` actually STOPS a leaked `java.util.Timer` thread (and
+a `ThreadPoolExecutor`), so no GC rooting is involved at all. And both were
+diagnosed: two stacked defects, each hiding the next.
+
+1. `Thread` did not inherit the parent's `contextClassLoader`, so Tomcat's
+   `if (ccl == this)` gate never fired and the stop was never attempted. Fixed
+   2026-06-23 (`CRATONVM_INHERIT_THREAD_CCL`).
+2. With the gate passing, the reflective stop threw
+   `InaccessibleObjectException: module java.base does not "opens java.util" to
+   org.apache.tomcat.catalina` — even though the harness passes
+   `--add-opens java.base/java.util=ALL-UNNAMED`. A modular jar on the CLASS
+   path was being labelled with the module its `module-info.class` declares
+   instead of the unnamed module, which an `ALL-UNNAMED` open cannot reach.
+   Fixed 2026-09-05 (`CRATONVM_CLASSPATH_JAR_UNNAMED_MODULE`).
+
+Defect 2 is why the Linux suite scored these red while the Windows suite scored
+them green on the same commit: the Linux classpath is built from
+`output/build/lib/*.jar` (and `catalina.jar` carries a `module-info.class`),
+the Windows one from the exploded `output/classes` directory, which carries
+none. **A class that passes on one host's classpath and fails on the other's is
+not necessarily a platform difference — check the classpath SHAPE first.**
 
 ### 5. Individually undiagnosed — 4
 
@@ -125,7 +147,7 @@ question, not a Tomcat one.
 |---|---|
 | `catalina.core.TestAsyncContextImpl` | 4 of 70 — ✅ **FIXED 2026-09-05**, same `stateLock` NPE as the HTTP/2 cluster in section 2 (`OK (70 tests)` on the fix) |
 | `catalina.connector.TestSendFile` | 1 of 2 |
-| `catalina.manager.TestManagerWebapp` | 2 of 4 on 2026-08-25 (1 of 4 on 08-14) — `testServlets` times out reading `GET /manager/jmxproxy` (`:147`), `testJsps` fails `assertTrue(body.contains("Sessions Administration"))` on `/manager/html/sessions` (`:697`). Both reproduce on pristine `dev`; HotSpot is `OK (4 tests)` in 19.6 s. **Not deploy timing** — the deploy itself finishes in 15.5 s and `testBug57700`/`testDeploy` both pass, which is what closed `fixed-suite-bugs/tomcat/webapp-deploy-annotation-scan-interpreted-226x-CLOSED-20260825.md` |
+| `catalina.manager.TestManagerWebapp` | 2 of 4 on 2026-08-25 (1 of 4 on 08-14) — `testServlets` times out reading `GET /manager/jmxproxy` (`:147`), `testJsps` fails `assertTrue(body.contains("Sessions Administration"))` on `/manager/html/sessions` (`:697`). Both reproduce on pristine `dev`; HotSpot is `OK (4 tests)` in 19.6 s. **Not deploy timing** — the deploy itself finishes in 15.5 s and `testBug57700`/`testDeploy` both pass, which is what closed `webapp-deploy-annotation-scan-interpreted-226x-CLOSED-20260825.md` |
 | `catalina.manager.TestHostManagerWebapp` | 1 of 1 — **flaky**: serially `OK` (29 s) on 08-22, `FAILURES` (31 s) on 08-23 |
 
 ## WebSocket — FIXED 2026-08-22, all 19 pass
@@ -137,13 +159,37 @@ gone across both sweeps. `aio_asc_read` — the `CompletionHandler` form of
 every frame read failed `read: bad fd for tcp clone`. Tomcat's `WsFrameClient`
 reads that as a dropped connection and closed the session immediately after
 `onOpen`. Record:
-`fixed-suite-bugs/websocket-19-class-cluster-was-one-raw-private-slot-FIXED-20260822.md`
+`websocket-19-class-cluster-was-one-raw-private-slot-FIXED-20260822.md`
 (plain text — that tree is stripped from public history).
 
 Worth carrying forward: the handler form is NIO2's main read path, so anything
 driving a concrete `AsynchronousSocketChannel` through a `CompletionHandler` hit
 this. Only the WebSocket classes were measured; **a NIO2-connector sweep has not
 been done.**
+
+## The G1 arm's 15 CRASH classes — **FIXED 2026-09-05**
+
+This page measures the DEFAULT collector, so the 15 CRASH classes a 2026-09-05
+three-collector run found on the **G1** arm (and nowhere else: 0 in the same
+run's Generational and ZGC arms) were never in its scope. They are fixed, and
+the reason is worth carrying forward here because it is not a Tomcat fact at
+all:
+
+> `CRATONVM_G1_PARALLEL_EVAC` is **on by default**, and every header screen the
+> serial evacuator gained in 2026-08/09 — the per-candidate plausibility check,
+> the per-holder element clamp, the "a root that is not an object start is not
+> evacuated" rule — had been added to the SERIAL arm only. The hardening was
+> landing on the code that does not run.
+
+Same-binary A/B on the Azure fixture, six interleaved repetitions of
+`catalina.startup.TestHostConfigAutomaticDeploymentXmlExternalWarXml` under
+`-XX:+UseG1GC`, with `CRATONVM_G1_PARALLEL_EVAC_SCREEN=0` as the only
+difference: **3 CRASH / 6 with the screens off, 0 CRASH / 6 with them on.**
+Across all 15 classes at n=1: 4 CRASH → 0.
+
+**Run the suite once per collector.** Two of the three collectors were clean on
+the exact commit where G1 lost 15 classes to a defect that had been introduced
+by a fix landing on one arm of a two-arm path.
 
 ## Reproduction
 
